Added new HTML page to go back home

--- a/html/about.html
+++ b/html/about.html
@@ -45,6 +45,8 @@
    
 </main>
 
+<a href="../index.html">Go Home</a>
+
 <footer>
 <p>&copy; 2024 Alexander Egerev. All rights reserved. </p>
 </footer>
