--- a/html/contact.html
+++ b/html/contact.html
@@ -18,6 +18,9 @@
         <p><a href="https://www.linkedin.com/in/alexander-egerev-3494aa301/">LinkedIn</a></p>
     </section>
 
+    <br/> <br/>
+    <a href="../index.html">Go Home</a>
+
     <footer>
     <p>&copy; 2024 Alexander Egerev. All rights reserved. </p>
     </footer>
